--- a/src/IZKModbusGUI.form
+++ b/src/IZKModbusGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="IZKModbusGUI">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="13" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="14" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1402" height="810"/>
+      <xy x="20" y="20" width="1402" height="1085"/>
     </constraints>
     <properties>
       <toolTipText value="IZKModbus"/>
@@ -13,7 +13,7 @@
       <component id="31277" class="javax.swing.JLabel" binding="comLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="5" use-parent-layout="false">
-            <preferred-size width="300" height="20"/>
+            <preferred-size width="274" height="20"/>
             <maximum-size width="300" height="20"/>
           </grid>
         </constraints>
@@ -21,14 +21,6 @@
           <text value="Label"/>
         </properties>
       </component>
-      <vspacer id="925db">
-        <constraints>
-          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="400"/>
-            <maximum-size width="-1" height="400"/>
-          </grid>
-        </constraints>
-      </vspacer>
       <component id="43ae" class="javax.swing.JTextField" binding="timeField">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="5" use-parent-layout="false">
@@ -78,7 +70,7 @@
       </component>
       <hspacer id="54cd7">
         <constraints>
-          <grid row="12" column="1" row-span="1" col-span="5" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="13" column="1" row-span="1" col-span="5" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="1000" height="-1"/>
             <maximum-size width="1000" height="-1"/>
           </grid>
@@ -121,7 +113,7 @@
       <component id="eb8f3" class="javax.swing.JButton" binding="terminalButton">
         <constraints>
           <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="588" height="30"/>
+            <preferred-size width="150" height="30"/>
             <maximum-size width="150" height="30"/>
           </grid>
         </constraints>
@@ -143,7 +135,7 @@
       </component>
       <component id="b4595" class="javax.swing.JTextField" binding="dataField">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="5" use-parent-layout="false">
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
             <preferred-size width="200" height="20"/>
             <maximum-size width="200" height="20"/>
           </grid>
@@ -154,7 +146,7 @@
       </component>
       <component id="e6e86" class="javax.swing.JTextField" binding="periodField">
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="5" use-parent-layout="false">
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
             <preferred-size width="200" height="20"/>
             <maximum-size width="200" height="20"/>
           </grid>
@@ -165,7 +157,7 @@
       </component>
       <component id="f3932" class="javax.swing.JTextField" binding="cs1Field">
         <constraints>
-          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="5" use-parent-layout="false">
+          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
             <preferred-size width="200" height="20"/>
             <maximum-size width="200" height="20"/>
           </grid>
@@ -177,7 +169,7 @@
       </component>
       <component id="a07d1" class="javax.swing.JTextField" binding="cs2Field">
         <constraints>
-          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="5" use-parent-layout="false">
+          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
             <preferred-size width="200" height="20"/>
             <maximum-size width="200" height="20"/>
           </grid>
@@ -189,7 +181,7 @@
       </component>
       <tabbedpane id="f5b1c" binding="tabbedPane1" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="10" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="10" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="800" height="600"/>
             <maximum-size width="800" height="600"/>
           </grid>
@@ -199,7 +191,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="3d92" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3d92" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Главный экран"/>
@@ -249,7 +241,7 @@
               </component>
               <component id="2572a" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Информация о блоке ИЗК-3"/>
@@ -257,7 +249,7 @@
               </component>
               <component id="8aeb2" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Активация блока ИЗК-3"/>
@@ -265,9 +257,9 @@
               </component>
               <component id="22371" class="javax.swing.JButton" binding="refButton">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="300" height="-1"/>
-                    <maximum-size width="300" height="-1"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="30"/>
+                    <maximum-size width="150" height="30"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -329,6 +321,14 @@
                   <editable value="false"/>
                 </properties>
               </component>
+              <hspacer id="ca0f0">
+                <constraints>
+                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="300" height="-1"/>
+                    <maximum-size width="300" height="-1"/>
+                  </grid>
+                </constraints>
+              </hspacer>
             </children>
           </grid>
           <grid id="c789" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -389,7 +389,7 @@
       </tabbedpane>
       <component id="b3679" class="javax.swing.JTextField" binding="errorField">
         <constraints>
-          <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="5" use-parent-layout="false">
+          <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="5" use-parent-layout="false">
             <preferred-size width="200" height="20"/>
             <maximum-size width="200" height="20"/>
           </grid>
@@ -399,6 +399,22 @@
           <text value=""/>
         </properties>
       </component>
+      <hspacer id="e0fe5">
+        <constraints>
+          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="274" height="11"/>
+            <maximum-size width="300" height="-1"/>
+          </grid>
+        </constraints>
+      </hspacer>
+      <vspacer id="925db">
+        <constraints>
+          <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="274" height="400"/>
+            <maximum-size width="-1" height="400"/>
+          </grid>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
